--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -15,3 +15,4 @@
 @using Syncfusion.Blazor.Notifications
 @using Syncfusion.Blazor.Grids
 @using Syncfusion.Blazor.Kanban
+@using Syncfusion.Blazor.Spinner
