--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -25,6 +25,11 @@
                     </NavLink>
                 </div>
                 <div class="nav-item px-3">
+                    <NavLink class="nav-link fs-14 fb-bold" href="Clients">
+                        <span class="e-icons e-people mr-10 fs-16"></span> Clients
+                    </NavLink>
+                </div>
+                <div class="nav-item px-3">
                     <NavLink class="nav-link fs-14 fb-bold" href="Account/Manage/Index">
                         <span class="e-icons e-settings mr-10 fs-16"></span> Settings
                     </NavLink>
